<resources>
    <string name="app_name">Timegram</string>
    <string name="action_settings">See metrics</string>

    <!-- EventActivity texts-->
    <string name="select_category">Select a category</string>
    <string name="hint_description">Tap here to write</string>
    <string name="text_description">Description</string>
    <string name="appointment_time">Appointment time:</string>
    <string name="cancel_text">CANCEL</string>
    <string name="save">SAVE</string>

    <!-- Available categories-->
    <array name="appointment_category">
        <item>Personal</item>
        <item>Family</item>
        <item>Work</item>
        <item>Work2</item>
        <item>Friends</item>
        <item>Health</item>
        <item>Dentist</item>
    </array>

    <!-- Categories with none selected-->
    <array name="appointment_category_with_null">
        <item>All categories</item>
        <item>Personal</item>
        <item>Family</item>
        <item>Work</item>
        <item>Work2</item>
        <item>Friends</item>
        <item>Health</item>
        <item>Dentist</item>
    </array>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="arrival_time">Arrival time</string>
    <string name="timediff_text">Average arriving time difference</string>

    <!-- Dialog texts-->
    <string name="msg_dialog_title">Do you want to delete this item?</string>
    <string name="msg_dialog_cancel">Cancel</string>
    <string name="msg_dialog_delete">Delete</string>
    <string name="minutes_text">min</string>
</resources>
